@@ -1,3 +1,7 @@
+2006-01-18 11:15 Mike Park  <mike.park@nasa.gov>
+
+	* src/gridfacer.c (gridfacerTecplot) started, not operational yet.
+
 2006-01-17 14:22 Mike Park  <mike.park@nasa.gov>
 
 	* src/gridfacer.c (gridfacerCollapse,gridfacerCollapseEdge) started,
